package io.github.sttanyanz.enb.model;

public enum Color {
    white, black

}
