package io.github.sttanyanz.enb.model;

public enum PieceName {
    pawn, knight, bishop, rook, queen, king
}
