package io.github.sttanyanz.enb.model.exceptions;

public abstract class AbstractENBException extends Exception{
}
