package io.github.sttanyanz.enb.model.exceptions;

public class AbstractIllegalMoveException extends AbstractENBException {
}
