package io.github.sttanyanz.enb.model.exceptions;

public class EmptySquareException extends AbstractENBException{

}
