package io.github.sttanyanz.enb.model.exceptions;

public class InvalidSquareException extends AbstractENBException {

}
