package io.github.sttanyanz.enb.model.exceptions;

public class MoveOnSameSquareException extends AbstractENBException {
}
