package io.github.sttanyanz.enb.model.exceptions;

public class UnreachableSquareForPieceNameException extends AbstractIllegalMoveException {
}
