@startuml
skinparam defaultFontSize 10
skinparam BackgroundColor DimGray
skinparam ClassAttributeFontColor LightGreen
skinparam PackageFontColor coral
skinparam ClassFontColor coral
skinparam package {
BackgroundColor #403F49/#604F59
}
skinparam class {
BackgroundColor #282C34/#483C44
}


package enb {
    package model {
        class Board
        class Game
        class Player
        class Square
        enum Color
        enum PieceName
        class Piece
        package exceptions {
            skinparam groupInheritance 3
            abstract class AbstractENBException
            class InvalidSquareException
            class EmptySquareException
            class MoveOnSameSquareException
            abstract class AbstractIllegalMoveException
            class UnreachableSquareForPieceNameException

            AbstractENBException <|-- InvalidSquareException
            AbstractENBException <|-- EmptySquareException
            AbstractENBException <|-- MoveOnSameSquareException
            AbstractENBException <|-- AbstractIllegalMoveException
            AbstractIllegalMoveException <|-- UnreachableSquareForPieceNameException
        }
    }

    Piece [*] *-- [1] Color
    Player [*] *-- [1] Color
    Board [1] o-- [*] Square
    Game [1] -left- [1] Board
    Game [1] -- [2] Player
    Board [1] -- [*] Piece
    Piece [*] *-- [1] PieceName

    package model {
        class Square {
            getFile() : File
            getRank() : int
        }

        class Board {
            getSize() : int
            getPiece(square : Square) : Piece
            getTurn() : Color
            setPiece(square : Square, piece : Piece) : void
            movePiece(originSquare : Square, destinationSquare : Square) : void
            switchTurn() : void
        }

        class Player {
            getName() : String
            getColor() : Color
        }

        class Piece {
            getColor() : Color
            getName() : PieceName
        }

        class Game {
            getWhitePlayer() : Player
            getBlackPlayer() : Player
            getBoard() : Board
        }
    }

    package controller {
        class MoveController
        class CurrentTurnController

        class MoveController{
            movePiece(board: Board, originSquare : Square, destinationSquare : Square) : void
        }

        class CurrentTurnController {
            getCurrentTurn(board: Board)) : Color
        }
    }

    package view {
        class consoleView {
            showBoard(game : Game) : void
            move(game : Game) : void
        }
    }
}
@enduml